perf: :zap: trying async css loading

--- a/_data/site.yaml
+++ b/_data/site.yaml
@@ -6,5 +6,6 @@ author:
   email: greenscarf005@gmail.com
 
 contact:
+  repo: "github.com/scarf005/scarf005.github.com"
   github: "github.com/scarf005"
   twitter: "twitter.com/scarf005"
