--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,7 +18,7 @@ jobs:
 
       - name: 🔥 Run lume
         run: |
-          deno run -A https://deno.land/x/lume/ci.ts --location=https://scarf005.github.io
+          deno run -A https://deno.land/x/lume/ci.ts --location=https://www.maribel.dev
 
       - name: 🚀 Deploy
         uses: crazy-max/ghaction-github-pages@v2.0.1
